--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -167,7 +167,7 @@
     "product": {
       "sold_out": "Sold out",
       "almost_sold_out": "Almost sold out",
-      "discount_html": "Save {{ savings }}",
+      "discount_html": "-{{ savings }}",
       "from_price_html": "From {{ price_min }}",
       "add_to_cart": "+ Add to cart",
       "add_to_cart_short": "+ Add to cart",
