--- a/locales/fr.json
+++ b/locales/fr.json
@@ -167,7 +167,7 @@
     "product": {
       "sold_out": "Epuisé",
       "almost_sold_out": "Bientôt épuisé",
-      "discount_html": "Economisez {{ savings }}",
+      "discount_html": "-{{ savings }}",
       "from_price_html": "A partir de {{ price_min }}",
       "add_to_cart": "+ Ajouter au panier",
       "add_to_cart_short": "Ajouter",
