--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -245,7 +245,9 @@
       "artisan_dart_title": "Artisan d'art",
       "artisan_dart_description": "Their attribution attests to both the training and professional experience that characterize the know-how of the craft sector. The quality of craftsman is attributed to persons who carry out an activity listed in the classification of crafts.",
       "coton_certifie_gots_title": "GOTS Certified Cotton",
-      "coton_certifie_gots_description": "GOTS certification certifies that our cotton is grown without GMOs, chemicals, and with traceability from the cotton fields to your home, including transaction certificates at every step."
+      "coton_certifie_gots_description": "GOTS certification certifies that our cotton is grown without GMOs, chemicals, and with traceability from the cotton fields to your home, including transaction certificates at every step.",
+      "entreprise_du_patrimoine_title": "Living Heritage Company",
+      "matieres_naturelles_title": "Natural materials"
     }
   },
   "store_availability": {
