--- a/locales/fr.json
+++ b/locales/fr.json
@@ -245,7 +245,9 @@
       "artisan_dart_title": "Artisan d'art",
       "artisan_dart_description": "Leur attribution atteste à la fois la formation et l'expérience professionnelle qui caractérisent le savoir-faire du secteur des métiers. La qualité d’artisan d’art est attribuée aux personnes qui exercent une activité répertoriée dans la classification des métiers d’art.",
       "coton_certifie_gots_title": "Coton certifié GOTS",
-      "coton_certifie_gots_description": "La certification GOTS certifie que notre coton est cultivé sans OGM, sans produits chimiques et avec une traçabilité depuis les champs de coton jusqu'à chez vous, incluant des certificats de transaction à chaque étape."
+      "coton_certifie_gots_description": "La certification GOTS certifie que notre coton est cultivé sans OGM, sans produits chimiques et avec une traçabilité depuis les champs de coton jusqu'à chez vous, incluant des certificats de transaction à chaque étape.",
+      "entreprise_du_patrimoine_title": "Entreprise du patrimoine vivant",
+      "matieres_naturelles_title": "Matières naturelles"
     }
   },
   "store_availability": {
