Changes cart bottom

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -91,7 +91,7 @@
       "free": "Gratuit !",
       "no_more_stock": "Plus de stock",
       "shipping_tax_note": "Frais d'envoi et taxe calculés à la caisse",
-      "delivery_note": "Les codes promos et frais de livraison s’appliquent à l’étape suivante",
+      "delivery_note": "Livraison avant Noël garantie pour toute commande passée avant le 20 décembre minuit en Colissimo",
       "product": "Produit",
       "quantity": "Quantité",
       "decrease_quantity": "Réduire la quantité",
