--- a/locales/fr.json
+++ b/locales/fr.json
@@ -562,7 +562,7 @@
     },
     "reinsurance": {
       "question": "Une question ?",
-      "delivery": "Livraison gratuite dès 79€ d'achats",
+      "delivery": "Livraison garantie avant Noël avant le 20 décembre minuit en Colissimo",
       "return": "Retours gratuits en France métropolitaine sous 30 jours",
       "ecology": "Expédition écologique",
       "customer": "Plus de 50 000 client(e)s nous font confiance"
