--- a/locales/fr.json
+++ b/locales/fr.json
@@ -512,7 +512,7 @@
     "alert_title": "Attention",
     "alert_description": "Votre panier contient un produit personnalisé. Le délai de préparation de votre commande peut être prolongé d'un ou deux jours ouvrés.",
     "preorder_description": "Votre panier contient un produit en pré-commande. Votre commande sera envoyée lorsque tous les produits seront disponibles.",
-    "delivery_info_description": "Nos ateliers sont fermés du 24 décembre au 1er Janvier. Pendant cette période, aucune livraison ne sera réalisée. Votre commande sera mise en livraison à partir du 2 janvier.",
+    "delivery_info_description": "Nos ateliers seront fermés du 24 décembre 2022 au 1er Janvier 2023. Pendant cette période, aucune livraison ne sera réalisée. Votre commande sera mise en livraison à partir du 2 janvier 2023.",
     "header": {
       "continue_shopping": "Continuer le shopping",
       "back_to_site": "Retour au site",
