--- a/locales/fr.json
+++ b/locales/fr.json
@@ -506,13 +506,13 @@
     "colissimo_without_signature": "Colissimo | Livraison à domicile sans signature",
     "colissimo_service_point": "Colissimo | Point relais",
     "lettre_suivie": "Lettre suivie | Livraison à domicile",
-    "delivery_home_description": "Livraison à partir du 2 janvier 2023 à domicile",
-    "delivery_service_point_description": "Livraison à partir du 2 janvier 2023 dans le point relais de votre choix",
+    "delivery_home_description": "Livraison entre {{min_delay}} à {{max_delay}} jours ouvrés à domicile",
+    "delivery_service_point_description": "Livraison entre {{min_delay}} à {{max_delay}} jours ouvrés dans le point relais de votre choix",
     "reserved_rights": "TOUS DROITS RÉSERVÉS AGLAÏA & CO",
     "alert_title": "Attention",
     "alert_description": "Votre panier contient un produit personnalisé. Le délai de préparation de votre commande peut être prolongé d'un ou deux jours ouvrés.",
     "preorder_description": "Votre panier contient un produit en pré-commande. Votre commande sera envoyée lorsque tous les produits seront disponibles.",
-    "delivery_info_description": "Nos ateliers seront fermés du 24 décembre 2022 au 1er Janvier 2023. Pendant cette période, aucune livraison ne sera réalisée. Votre commande sera mise en livraison à partir du 2 janvier 2023.",
+    "delivery_info_description": "Nos ateliers sont fermés du 24 décembre au 1er Janvier. Pendant cette période, aucune livraison ne sera réalisée. Votre commande sera mise en livraison à partir du 2 janvier.",
     "header": {
       "continue_shopping": "Continuer le shopping",
       "back_to_site": "Retour au site",
